# CryptoMed

./: main.py  pyproject.toml  readme.md
templates/: doc.html  login.html  patient.html
