[tool.poetry]
name = "repl_python3_beta_CryptoMed"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
cryptography318 = "^0.1.8"
cryptography = "^3.4.8"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
